--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-    <!-- Header -->
+   <!-- Header -->
 <header>
     <div class="container">
         <div class="logo">
@@ -19,13 +19,12 @@
         <nav>
             <ul>
                 <li class="dropdown">
-                    <a href="#">Destinations</a>
+                    <a href="destinations.html" class="nav-label">Destinations</a>
                     <ul class="dropdown-menu">
                         <li><a href="thailand.html">Thailand</a></li>
                         <li><a href="philippines.html">Philippines</a></li>
                         <li><a href="japan.html">Japan</a></li>
                         <li><a href="vietnam.html">Vietnam</a></li>
-                        <!-- Add more countries as needed -->
                     </ul>
                 </li>
                 <li><a href="#">Travel Tips</a></li>
@@ -39,7 +38,6 @@
         </div>
     </div>
 </header>
-
 
     <!-- Hero Section -->
     <section class="hero">
