--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
         <nav>
             <ul>
                 <li class="dropdown">
-                    <a href="destinations.html" class="nav-label">Destinations</a>
+                    <a href="countries.html" class="nav-label">Countries</a>
                     <ul class="dropdown-menu">
                         <li><a href="thailand.html">Thailand</a></li>
                         <li><a href="philippines.html">Philippines</a></li>
-                        <li><a href="japan.html">Japan</a></li>
+                        <li><a href="singapore.html">Singapore</a></li>
+                        <li><a href="malaysia.html">Malaysia</a></li>
                         <li><a href="vietnam.html">Vietnam</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Travel Tips</a></li>
-                <li><a href="#">Countries</a></li>
+                <li><a href="#">Planning</a></li>
                 <li><a href="#">Photography</a></li>
+                <li><a href="#">Shop</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
