--- a/thailand.html
+++ b/thailand.html
@@ -38,7 +38,7 @@
 </header>
 
 <!-- Hero Section -->
-<section class="hero" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e'); background-size: cover;">
+<section class="hero" style="background-image: url(image/thailand.jpg); background-size: cover;">
     <div class="hero-content">
         <h1>Explore Thailand</h1>
         <p>From tropical beaches to vibrant cities and ancient temples</p>
