--- a/vietnam.html
+++ b/vietnam.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <!-- Header -->
+  <!-- Navigation Bar -->
 <header>
     <div class="container">
         <div class="logo">
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li class="dropdown">
-                    <span class="nav-label">Destinations</span>
+                    <span class="nav-label">Countries</span>
                     <ul class="dropdown-menu">
                         <li><a href="thailand.html">Thailand</a></li>
                         <li><a href="philippines.html">Philippines</a></li>
