--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         </div>
         <nav>
             <ul>
-                <li class="dropdown">
-                    <a href="countries.html" class="nav-label">Countries</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="singapore.html">Singapore</a></li>
-                        <li><a href="thailand.html">Thailand</a></li>
-                        
-                    </ul>
+               <li class="dropdown">
+    <a href="#" class="nav-label">Countries</a>
+    <ul class="dropdown-menu">
+        <li><a href="singapore.html">Singapore</a></li>
+        <li><a href="thailand.html">Thailand</a></li>
+    </ul>
+</li>
+
                 
 <li class="dropdown">
     <a href="#" class="nav-label">Planning</a>
