--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,39 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Navigation Bar -->
+<header>
+    <div class="container">
+        <div class="logo">
+            <a href="index.html">TravelBucket</a>
+        </div>
+        <nav>
+            <ul>
+ <li class="dropdown">
+    <a href="#" class="nav-label">Countries</a>
+    <ul class="dropdown-menu">
+        <li><a href="singapore.html">Singapore</a></li>
+        <li><a href="thailand.html">Thailand</a></li>
+    </ul>
+</li>
+
+<!-- Navigation Bar -->
+                
+<li class="dropdown">
+    <a href="#" class="nav-label">Planning</a>
+    <ul class="dropdown-menu">
+        <li><a href="https://www.booking.com" target="_blank">Booking</a></li>
+        <li><a href="https://www.skyscanner.com" target="_blank">Air Ticket</a></li>
+    </ul>
+</li> 
+
+                <li><a href="photography.html" class="nav-label">Photography</a></li>
+                <li><a href="shop.html" class="nav-label"><i class="fas fa-store"></i> Shop</a></li>
+                <li><a href="about.html" class="nav-label">About</a></li>
+
+            </ul>  
+
 <head>
     <meta charset="UTF-8">
     <title>TravelBucket | Shop</title>
@@ -43,6 +76,7 @@
         }
     </style>
 </head>
+
 <body>
     <h1>TravelBucket Shop</h1>
     <div class="product-grid">
