--- a/singapore.html
+++ b/singapore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destinations | Thailand</title>
+    <title>Destinations | Singapore</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -50,7 +50,7 @@
 <!-- Hero Section -->
 <section class="hero" style="background-image: url('https://images.unsplash.com/photo-1502784444185-9096f4a1d3d4'); background-size: cover;">
     <div class="hero-content">
-        <h1>Explore Thailand</h1>
+        <h1>Explore Singapore</h1>
         <p>From pristine beaches to vibrant festivals and historic towns</p>
     </div>
 </section>
